crates/ffmpeg/src/io/snapshots/scuffle_ffmpeg__io__output__tests__test_output_write_mp4_trailer.snap
---
source: crates/ffmpeg/src/io/output.rs
expression: get_boxes!(output)
snapshot_kind: text
---
[
    UnknownBox {
        header: BoxHeader {
            size: Short(
                32,
            ),
            box_type: FourCc(
                "ftyp",
            ),
        },
        data.len: 794302,
    },
]
